# TPcpp_elaili_yahya

./: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  KNN.cpp  KNN.h  KNNDouble.h  KNNString.h  Main.cpp  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h  Zoo.cpp  Zoo.h
